# fullstack-project

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AI-AGENT-PROMPTS.md  API-STANDARDIZATION-COMPLETE.md  API-STANDARDS-IMPLEMENTATION-POC-COMPLETE.md  API-STANDARDS-REVIEW-COMPLETE.md  ARCHITECTURE-ANALYSIS.md  ARCHITECTURE-GUIDE.md  AUTH-SERVICE-DOCKER-MIGRATION.md  CARRIER-SERVICE-INFRASTRUCTURE-QUICK-REFERENCE.md  CI-CD-COMPLETION-SUMMARY.md  CMakeLists.txt  CODE-QUALITY-ASSESSMENT.md  CODE-QUALITY-IMPROVEMENTS-COMPLETE.md  CONSISTENCY-IMPROVEMENTS-COMPLETE.md  CONSUL-IMPLEMENTATION-SUMMARY.md  CONSUL-QUICK-REFERENCE.md  CONSUL-USAGE-GUIDE.md  CONSUL-WEEK2-COMPLETION.md  CUSTOMER-SERVICE-DOCKER-INFRASTRUCTURE-EXECUTIVE-SUMMARY.md  CUSTOMER-SERVICE-FIX.md  CUSTOMER-SERVICE-GIT-FLOW-EXECUTIVE-SUMMARY.md  CUSTOMER-SERVICE-HEALTH-CHECK.md  CUSTOMER-SERVICE-QUICK-REFERENCE.md  DEVELOPER-QUICK-REFERENCE.md  DOCKER-WORKSPACE-COMMANDS.md  DOCUMENTATION-CONSOLIDATION-PLAN.md  DOCUMENTATION-INDEX.md  DOCUMENTATION-QUICK-GUIDE.md  DTO-DIRECTORY-CLEANUP-CHECKPOINT.md  FEATURE-F00001-README.md  FORMAT-CONTROL-GUIDE.md  Fullstack-Project-API.postman_collection.json  Fullstack-Project-Environment.postman_environment.json  GIT-COMMIT-SUMMARY.md  GIT-FLOW-CARRIER-TRANSLATION-MERGE.md  GIT-FLOW-CLOUD-INFRASTRUCTURE.md  GIT-FLOW-COMPLETE-STRATEGY.md  (+92 more)
.clinerules/: mcp-server-rule.md
.github/: CI-CD-INTEGRATION-GUIDE.md  copilot-instructions.md
api-gateway/: .env.example  CENTRALIZED-LOGGING-STATUS.md  IMPLEMENTATION-GUIDE.md  KONG-HEALTH-ROUTES-SETUP.md  KONG-STARTUP-TROUBLESHOOTING.md  POSTMAN-TESTING-GUIDE.md  QUICK-START.md  README.md  STATUS.md  STRUCTURED-LOGGING-GUIDE.md  STRUCTURED-LOGGING-README.md  STRUCTURED-LOGGING-SUMMARY.md  configure-jwt.sh  configure-rate-limiting.sh  configure-rbac.sh  docker-compose.kong.yml  docker-compose.logging.yml  docker-compose.monitoring.yml  kong.yml  package.json  prometheus.yml  restart-kong.sh  setup-kong.sh  setup-logging.sh  setup-seller-routes.sh
auth-service/: .env.example  .env.shared.example  ARCHITECTURE-COMPARISON-ANALYSIS.md  AUTH-SERVICE-EVENT-IMPLEMENTATION.md  AUTH-SERVICE-EVENT-QUICK-REFERENCE.md  CLEAN-ARCHITECTURE-REFACTOR.md  CLEAN-STRUCTURE-EXPLANATION.md  CODE-QUALITY-ANALYSIS.md  DOCKER-COMMANDS.md  DOCKER-README.md  Dockerfile  GIT-FLOW-ARCHITECTURE-IMPROVEMENTS.md  GIT-FLOW-SUMMARY.md  KONG-INTEGRATION-GUIDE.md  KONG-PHASE1-GIT-FLOW.md  KONG-PHASE1-SUMMARY.md  KONG-PHASE2-PLAN.md  MIGRATION-QUICK-REFERENCE.md  MIGRATION-SETUP-COMPLETE.md  PULL-REQUEST-SECURITY-FIXES.md  README.md  SECURITY-FIXES-APPLIED.md  docker-compose.yml  env.example  env.production  nest-cli.json  package-lock.json  package.json  tsconfig.json  typeorm.config.ts
carrier-service/: ARCHITECTURE-REVIEW.md  CARRIER-SERVICE-INFRASTRUCTURE-GIT-FLOW.md  Dockerfile  EVENT-IMPLEMENTATION-SUMMARY.md  MIGRATION-SETUP-COMPLETE.md  docker-compose.yml  env.example  package-lock.json  package.json  simple-carrier-service.js  typeorm.config.ts
consul/: CONSUL-IMPLEMENTATION-COMPLETE.md  CONSUL-QUICK-REFERENCE.md  CONSUL-QUICK-START.md  CONSUL-REFERENCE-CARD.md  CONSUL-SETUP.md  CONSUL-TEST-RESULTS.md  OPTION-C-COMPLETION-SUMMARY.md  check-service-health.sh  register-services.sh  seed-consul-config.sh  test-service-discovery.sh
customer-service/: .env.example  ARCHITECTURE-REVIEW.md  Dockerfile  EVENT-IMPLEMENTATION-SUMMARY.md  MIGRATION-SETUP-COMPLETE.md  docker-compose.yml  env.example  package-lock.json  package.json  simple-customer-service.js  tsconfig.json  typeorm.config.ts
docs/: API-FORMAT-COMPARISON.md  API-RESPONSE-FORMAT-EXAMPLES.md  API-STANDARDS-INDEX.md  API-STANDARDS-QUICK-REFERENCE.md  API-STANDARDS-REVIEW-SUMMARY.md  API-STANDARDS.md  DOCKER-NOT-RUNNING.md  DOCUMENTATION-CLEANUP-PLAN-FINAL.md  DOCUMENTATION-INDEX.md  DOCUMENTATION-ORGANIZATION-SUMMARY.md  README.md  SERVICES-NOT-RUNNING.md
docs-archive/: README.md
go-app-api/: .gitignore  Makefile  go.mod  test-feature.txt
infrastructure/: GCP-MIGRATION-PHASE-1-2-COMPLETE.md  GCP-MIGRATION-PHASE-3-COMPLETE.md  GETTING-STARTED.md  VM-DEPLOYMENT-COMPLETE.md
integration-tests/: END-TO-END-WORKFLOW-SUMMARY.md  INTEGRATION-TESTING-ITERATION-SUMMARY.md  KONG-GATEWAY-INTEGRATION-SUMMARY.md  NEXT-STEPS-COMPLETION-SUMMARY.md  PERFORMANCE-LOAD-TESTING-SUMMARY.md  PHASE-4-E2E-COMPLETION.md  QUICK-REFERENCE.md  README.md  business-services-integration-test.sh  end-to-end-workflow-test.sh  integration-test-framework.sh  kong-gateway-integration-test.sh  performance-load-test.sh  pricing-service-migration-test.sh  redis-caching-integration-test.sh  run-all-tests.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  react-admin-user-module-structure.md  systemPatterns.md  techContext.md
nestjs-app-api/: .gitignore
pricing-service/: .env.example  Dockerfile  MIGRATION-QUICK-REFERENCE.md  MIGRATION-SETUP-COMPLETE.md  MIGRATIONS-README.md  POSTMAN-COLLECTION-GUIDE.md  Pricing-Service.postman_collection.json  docker-compose.yml  env.example  package-lock.json  package.json  simple-pricing-service.js  typeorm.config.ts
react-admin/: .env.example  .eslintrc.js  .prettierignore  API-CONFIG-REFACTORING.md  CARRIER-TABLE-DESCRIPTION-TOOLTIP.md  GIT-FLOW-SUMMARY.md  IMPLEMENTATION-SUMMARY.md  LABEL-STRUCTURE-ANALYSIS.md  MODULE-COMPARISON-MATRIX.md  MODULE-CONSISTENCY-ANALYSIS.md  MODULE-CONSISTENCY-DOCUMENTATION-INDEX.md  MODULE-CONSISTENCY-SUMMARY.md  MODULE-STANDARDIZATION-ACTION-PLAN.md  MODULE-STANDARDIZATION-IMPLEMENTATION-SUMMARY.md  NAVIGATION-TRANSLATION-FIXES.md  PHASE-2A-COMPLETION.md  PHASE4-DATABASE-SEEDING-COMPLETE.md  PHASE5-MULTI-LANGUAGE-TESTING-GUIDE.md  PHASE5-QUICK-START.md  REACT-ADMIN-TRANSLATION-INTEGRATION-COMPLETE.md  ROLE-MANAGEMENT-PROGRESS.md  ROLE-MANAGEMENT-QUICK-REFERENCE.md  ROLE-MANAGEMENT-STATUS.md  SELLER-FORM-FIELD-VALIDATION-SUMMARY.md  SHARED-UI-TRANSLATION-COMPLETE.md  TRANSLATION-FIX-FR-PREFIX-RESOLVED.md  TRANSLATION-LABEL-INVENTORY.md  TRANSLATION-LABELS-COMPLETION.md  TRANSLATION-LABELS-IMPLEMENTATION.md  craco.config.js  (+15 more)
(+1308 files in other folders)
